comment out unshallow

--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,7 @@ deployment:
     commands:
       - heroku maintenance:on --app howling-hematite
       - heroku pg:backups capture --app howling-hematite
-      - git fetch origin --unshallow
+        # - git fetch origin --unshallow
       - git push git@heroku.com:howling-hematite.git $CIRCLE_SHA1:refs/heads/master
       - heroku run rake db:migrate --app howling-hematite
       - heroku maintenance:off --app howling-hematite
@@ -15,7 +15,7 @@ deployment:
     branch: staging
     commands:
       - heroku maintenance:on --app howling-hematite
-      - git fetch origin --unshallow
+        #- git fetch origin --unshallow
       - git push git@heroku.com:howling-hematite-staging.git $CIRCLE_SHA1:refs/heads/master
       - heroku run rake db:migrate --app howling-hematite-staging
       - heroku maintenance:off --app howling-hematite-staging
