--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ config/database.yml
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore application configuration
+/config/application.yml
