--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ deployment:
     branch: staging
     commands:
       - heroku maintenance:on --app howling-hematite-staging
-        #- git fetch origin --unshallow
+      - git fetch origin --unshallow
       - git push git@heroku.com:howling-hematite-staging.git $CIRCLE_SHA1:refs/heads/master
       - heroku run rake db:migrate --app howling-hematite-staging
       - heroku maintenance:off --app howling-hematite-staging
